--- a/springboot-shiro/pom.xml
+++ b/springboot-shiro/pom.xml
@@ -57,7 +57,15 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-pool</artifactId>
+			<!-- <version>5.7.0</version> -->
+		</dependency>
 
 	</dependencies>
 
